--- a/index.Rmd
+++ b/index.Rmd
@@ -16,7 +16,7 @@ output:
   language: english
   classoption: twocolumn
 # End of options to set
-title: "Quantifying changes in the Distribution of Atlantic Cod and Yellowtail Flounder on Georges Bank"
+title: "Quantifying shifts in the distributions of Atlantic Cod and Yellowtail Flounder on Georges Bank"
 author: |
   David M. Keith^1^,
   Jessica A. Sameoto^1^,
@@ -35,7 +35,7 @@ report_number: nnn
 region: Maritimes Region
 author_list: "Keith, D.M., Sameoto, J.A., Keyser, F.M., Andrushchenko, I."
 abstract: |
-  Sustainably managing marine fisheries has long been recognized as a global priority which has proven difficult to achieve.  The reasons sustainable fisheries management goals have not been achieved include various socio-economic, political, and scientific factors.  Scientifically, one of the major challenges has been understanding how spatial and temporal heterogenity in processes impact the population dynamics of a stock. Fisheries science has spent a great deal of effort collecting data, both biological and environmental, which are inherently spatial and temporal in nature. Computational and statistical limitations have resulted in science products which do not fully utilize the spatio-temporal information contained in these data and tend to treat stocks as homogeneous entities.  Fortunately, computational advances coupled with more accessible statistical methods have resulted in new methodologies which can harness the spatio-temporal information contained in these fisheries data.  Here we develop temporally variable species distribution models for Yellowtail Flounder (*Limanda ferruginea*) and Atlantic Cod (*Gadus morhua*) on Georges Bank (GB) using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States.  These models indicate there are both seasonal and long term shifts in the distribution of both stocks.  The average sea surface temperature (SST; average from 1997-2008) and depth were significant predictors of the distribution of both stocks throughout the year.  Significant shifts in the distribution of both stocks occurs relatively frequently, with the distribution of Atlantic Cod observed to differ approximately every 5 years, while the Yellowtail Flounder distribution appears to fluctuate at least every 3 years. The core areas for both stocks shifts to the north and east throughout the study period.  Much of this shift is due to the loss of the stocks from southern and western portions of GB.  The seasonal distribution of Atlantic Cod and Yellowtail Flounder are relatively consistent throughout the late winter and spring, while in the fall the distribution of Atlantic Cod shifts towards the edge of the bank. For Atlantic Cod there has been a substainal decline in core area within the United States waters on Georges Bank while there has been little change in Canadian waters.  In U.S. waters the Yellowtail Flounder core area declined rapidly in the late 1970s and early 1980s, but rebounded rapidly in the 1990s and early 2000s, while the core area was unchanged or slowly increased in Canadian waters over this time. These trends have resulted in an increase in the proportion of both stocks in Canadian waters in recent years. The models for both stocks were also relatively successful at predicting the likely location of the stock up to 3 years into the future, in addtion the simplified models which use only the random field for prediction performed as well as the models that included environmental covariates. Here we show how these models are able to provide novel insights into both seasonal and inter-annual variability in species distributions even without the use of environmental covariates. The incorporation of spatial information into science advice will improve our ability to sustainably manage these stocks.  
+  A major challenge for fisheries stock assessment and management has been understanding how spatial and temporal heterogeneity impacts the population dynamics of a stock. Although fisheries data are often inherently spatial and temporal in nature; the full utilization of this information has historically been limited. Fortunately, recent computational advances have resulted in new methodologies for spatio-temporal modelling.  Here we developed temporally variable species distribution models for Yellowtail Flounder (*Limanda ferruginea*) and Atlantic Cod (*Gadus morhua*) on Georges Bank (GB) using a suite of static environmental covariates and presence-absence information from groundfish trawl surveys in Canada and the United States (U.S.). These models identified both seasonal and long term shifts in the distribution of both stock with the average sea surface temperature (SST; average from 1997-2008) and depth being significant predictors of the stocks distributions.  Significant shifts in the distribution of Atlantic Cod and Yellowtail Flounder were observed every 5 years and at least every 3 years, respectively. The core areas for both stocks shifted to the north and east throughout the study period.  For Atlantic Cod there has been a substainal decline in the size of the core area within the U.S. waters while there has been little change in Canadian waters.  In U.S. waters, the size of the Yellowtail Flounder core area declined rapidly in the late 1970s and early 1980s, but rebounded in the 1990s and early 2000s, while in Canadian waters the size of the core area was unchanged or slowly increased. Simplified models using only the random field for prediction performed as well as the models that included environmental covariates and were able to provide novel insights into both seasonal and inter-annual variability in species distributions. The incorporation of spatial information into science advice will improve the ability to sustainably manage these stocks.  
 header: "Draft working paper --- Do not cite or circulate" # or "" to omit
 
 knit: bookdown::render_book
